<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cost_estimator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cocoaguard.cocoaguard.UI.CostEstimatorActivity"
    tools:showIn="@layout/activity_cost_estimator">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:digits="1234567890."
        android:imeOptions="actionNext"
        android:layout_alignParentTop="true"
        android:id="@+id/laborEditText"
        android:hint="@string/Labor_Cost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890."
        android:imeOptions="actionNext"
        android:ems="10"
        android:id="@+id/fertilizerEditText"
        android:hint="@string/Fertilizer_Cost"
        android:layout_below="@+id/laborEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890."
        android:imeOptions="actionNext"
        android:ems="10"
        android:layout_below="@+id/fertilizerEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/pesticideEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/Pesticide_Cost"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890."
        android:imeOptions="actionNext"
        android:ems="10"
        android:layout_below="@+id/pesticideEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/transportationEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/Transportation_Cost"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890."
        android:imeOptions="actionNext"
        android:ems="10"
        android:layout_below="@+id/transportationEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/otherEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/Other_Costs"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890."
        android:imeOptions="actionNext"
        android:ems="10"
        android:id="@+id/incomeEditText"
        android:hint="@string/Gross_income"
        android:layout_below="@+id/otherEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:hint="@string/Total_Profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultsTextView"
        android:gravity="center"
        android:textSize="25sp"
        android:height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Calculate_Profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculateButton"
        android:textSize="20sp"
        android:layout_below="@+id/incomeEditText"
        android:layout_above="@id/resultsTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorAccent"/>


</RelativeLayout>
